--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.56.2",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "date-fns": "^2.29.3"
   }
 }
